--- a/header.css
+++ b/header.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
-
 body {
     font-family: 'Lato', sans-serif;
 }
@@ -42,6 +41,7 @@ body {
         margin: 0;
         line-height: 1.4em;
         width: 70%;
+        max-width: 850px;
         height: 90px;
         display: flex;
         align-items: center;
@@ -210,7 +210,7 @@ body {
     
     .airline-filter-item .airline-filter-item-from,
     .airline-filter-item .airline-filter-item-price {
-        font-size: 0.8em;
+        font-size: 0.7em;
     }
     
     .airline-filter-item-from {
@@ -230,8 +230,8 @@ body {
     }
     
     .stop-filter-item-price {
-        padding-top: 2px;
-        font-size: 0.8em;
+        padding-top: 4px;
+        font-size: 0.7em;
     }
     
     .stops-filter .stop-filter-item-section+.stop-filter-item-section {
