--- a/header.css
+++ b/header.css
@@ -180,6 +180,12 @@ body {
     }
     */
     
+    .airlines-filter .airline-filters-section {
+        max-height: 221px;
+        overflow-y: scroll;
+        padding-right: 4px;
+    }
+    
     .stops-filter .stop-filter-item-section {
         display: block;
     }
