--- a/header.css
+++ b/header.css
@@ -180,6 +180,9 @@ body {
     }
     */
     
+    .flight-filters {
+        color: #4d4d4d;
+    
     .flight-filters .flight-filters-container {
         background: none;
     }
