--- a/header.css
+++ b/header.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Sarabun:300,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700');
 
 body {
-    font-family: 'Sarabun', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 @media (min-width: 70em) {
