--- a/header.css
+++ b/header.css
@@ -161,24 +161,49 @@ body {
         -webkit-justify-content: center;
     }
     
-    /* Sidebar airline filter
+    /* Sidebar airline filter */
     
-    .airlines-filter .airline-filters-section {
-        display: block;   
-    }
-    
-    .airlines-filter .airline-filter-item-section {
-        display: inline;
-        position: relative;
-    }
-    
-    .airlines-filter .airline-filter-item {
-        display: block;
-        border-radius: 3px;
-        width: auto;
+    .domestic-fares-container .domestic-fare-card {
+	width: 280px;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	transition: all 0.3s ease;
+}
+
+    .domestic-fares-container .header {
         text-align: left;
+        margin: 0;
+        padding: 0.8rem 1rem;
+        border-color: #dcdcdc;
     }
-    */
+
+    .fare-item-name {
+        padding-left: 10px;
+        padding-top: 5px;
+        font-weight: bold;
+    }
+
+    .domestic-fares-container .main {
+        font-size: 0.8em;
+    }
+
+    .domestic-fares-container .main p {
+        margin: 0.7em 0.25em;
+    }
+
+    .domestic-fares-container .main p i {
+        width: 18px;
+        color: #2ed06e;
+    }
+
+    .domestic-fares-container .fare-price {
+        margin-left: 1rem;
+        font-weight: bold;
+    }
+
+    .primary-button.alt-size-sm {
+        padding: .4rem 1.2rem;
+    }
     
     .flight-filters {
         color: #4d4d4d;
