--- a/header.css
+++ b/header.css
@@ -207,6 +207,7 @@ body {
     
     .flight-filters {
         color: #4d4d4d;
+    }
     
     .flight-filters .flight-filters-container {
         background: none;
