--- a/header.css
+++ b/header.css
@@ -211,6 +211,7 @@ body {
     
     .flight-filters .flight-filters-container {
         background: none;
+	border: none;
     }
     
     .airlines-filter .airline-filters-section {
