--- a/header.css
+++ b/header.css
@@ -4,6 +4,11 @@ body {
     font-family: 'Nunito Sans', sans-serif;
 }
 
+.app-page .page-heading, .app-page .passenger-details .passenger-display-name, .passenger-details .app-page .passenger-display-name {
+	color: #000;
+	font-size: 24px;
+}
+	
 @media (min-width: 70em) {
     .hero-container {
         display: none;
